; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_wined3d_gl_type_to_enum.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_wined3d_gl_type_to_enum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_TEXTURE_1D = common dso_local global i32 0, align 4
@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@GL_TEXTURE_3D = common dso_local global i32 0, align 4
@GL_TEXTURE_CUBE_MAP_ARB = common dso_local global i32 0, align 4
@GL_TEXTURE_RECTANGLE_ARB = common dso_local global i32 0, align 4
@GL_RENDERBUFFER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Unexpected GL resource type %u.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @wined3d_gl_type_to_enum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wined3d_gl_type_to_enum(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %20 [
    i32 132, label %5
    i32 131, label %7
    i32 130, label %9
    i32 129, label %11
    i32 128, label %13
    i32 135, label %15
    i32 133, label %17
    i32 134, label %19
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @GL_TEXTURE_1D, align 4
  store i32 %6, i32* %2, align 4
  br label %23

7:                                                ; preds = %1
  %8 = load i32, i32* @GL_TEXTURE_2D, align 4
  store i32 %8, i32* %2, align 4
  br label %23

9:                                                ; preds = %1
  %10 = load i32, i32* @GL_TEXTURE_3D, align 4
  store i32 %10, i32* %2, align 4
  br label %23

11:                                               ; preds = %1
  %12 = load i32, i32* @GL_TEXTURE_CUBE_MAP_ARB, align 4
  store i32 %12, i32* %2, align 4
  br label %23

13:                                               ; preds = %1
  %14 = load i32, i32* @GL_TEXTURE_RECTANGLE_ARB, align 4
  store i32 %14, i32* %2, align 4
  br label %23

15:                                               ; preds = %1
  %16 = load i32, i32* @GL_TEXTURE_2D, align 4
  store i32 %16, i32* %2, align 4
  br label %23

17:                                               ; preds = %1
  %18 = load i32, i32* @GL_RENDERBUFFER, align 4
  store i32 %18, i32* %2, align 4
  br label %23

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %1, %19
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @ERR(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %21)
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %20, %17, %15, %13, %11, %9, %7, %5
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
